<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="12dp"
    android:background="@drawable/shapecorner_radius"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutOne"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/phone"
        android:accessibilityPaneTitle="@string/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTwo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/layoutOne"
        app:layout_constraintStart_toStartOf="@+id/layoutOne"
        app:layout_constraintTop_toBottomOf="@+id/layoutOne">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Login"
        android:textSize="16sp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/layoutTwo"
        app:layout_constraintStart_toStartOf="@+id/layoutTwo"
        app:layout_constraintTop_toBottomOf="@+id/layoutTwo" />

    <Button
        android:id="@+id/btnLoginGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/google"
        android:textSize="16sp"
        android:textColor="@color/google"
        app:strokeColor="@color/google"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

    <Button
        android:id="@+id/btnRegister"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Register"
        app:layout_constraintStart_toStartOf="@+id/btnLoginGoogle"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginGoogle" />

    <Button
        android:id="@+id/btnFoget"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Forget"
        app:layout_constraintEnd_toEndOf="@+id/btnLoginGoogle"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginGoogle" />

</androidx.constraintlayout.widget.ConstraintLayout>